--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: acs_nfc
-description: A new flutter plugin project.
+description: ACS NFC Reader flutter plugin project.
 version: 0.0.1
 author: Amr Eniou <amorenew@gmail.com>
-homepage: https://github.com/amorenew/Flutter-Alps-device-finger-scan
-
+homepage: https://github.com/amorenew/ACS_NFC_Flutter.git
 environment:
   sdk: ">=2.4.0 <3.0.0"
 
