--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     //rx Android for updating finger status
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-    compile 'com.alibaba:fastjson:1.2.59'
-    // implementation files('D:\\Programming\\Android\\Tools\\Flutter_SDK\\bin\\cache\\artifacts\\engine\\android-x64\\flutter.jar')
+    implementation 'com.alibaba:fastjson:1.2.59'
+    //implementation files('D:\\Programming\\Android\\Tools\\Flutter_SDK\\bin\\cache\\artifacts\\engine\\android-x64\\flutter.jar')
 
 }
