--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: acs_nfc
-description: ACS NFC Reader flutter plugin project.
-version: 1.0.2
+description: ACS NFC Reader flutter plugin project which is used for reading NFC from ACS NFC Reader devices.
+version: 1.0.3
 author: Amr Eniou <amorenew@gmail.com>
 homepage: https://github.com/amorenew/ACS_NFC_Flutter.git
 environment:
