--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,8 @@ description: ACS NFC Reader flutter plugin project which is used for reading NFC
 version: 1.0.6
 homepage: https://github.com/amorenew/ACS_NFC_Flutter.git
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  # Flutter versions prior to 1.12 did not support the
-  # flutter.plugin.platforms map.
-  flutter: ">=1.12.0 <2.0.0"
+  sdk: ">=2.12.0 <4.0.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
